--- a/pogona_hunter/index.html
+++ b/pogona_hunter/index.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pogona Hunter</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="http://livejs.com/live.js"></script>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>pogona_hunter</title>
+  </head>
+  <body>
     <h1 style="text-align: center;margin-top: 10px">Pogona Hunter</h1>
-    <div class="container">
-        <canvas id="canvas"></canvas>
-        
-        <h3 style="margin: 10px auto 0">SCORE: <span id='score'></span></h3>
-        <p style="float: right">Written by Reggev Eyal</p>
-    </div>
-
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/smashant.js"></script>
-    
-</body>
+    <div id="app"></div>
+    <p style="float: right">Written by Reggev Eyal</p>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
