--- a/pogona_hunter/index.html
+++ b/pogona_hunter/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1 style="text-align: center;margin-top: 10px">Pogona Hunter</h1>
+    <p style="position: absolute; right: 1em">Written by Reggev Eyal</p>
     <div id="app"></div>
-    <p style="float: right">Written by Reggev Eyal</p>
     <!-- built files will be auto injected -->
   </body>
 </html>
